--- a/coeit-research.html
+++ b/coeit-research.html
@@ -48,7 +48,7 @@
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">ABOUT ME</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
@@ -103,7 +103,7 @@
     		<h3 class="uppermargin"><strong>Outcome</strong></h3>
     		<p class="justified paragraph">We provided recommendations to increase efficiency of search, decrease the time taken to find information within the website and improve the time spent by the users on the website. </p>
 
-        <h3 class="uppermargin"><strong>Goals</strong></h3>
+        <h3 class="uppermargin"><strong>Goals of the project</strong></h3>
         <p class="justified paragraph">
            <b class="textbackground3"> Employ the Design thinking process and user research to provide recommendations </b> to improve the current website of the COEIT research division. </p>
 
@@ -111,7 +111,7 @@
     			<img src="assets/img/Personal/CR.png" class="avatar9 uppermargin" alt="">
 
 
-    <h3 class ="uppermargin"><strong>Challenges</strong></h3>
+    <h3 class ="uppermargin"><strong>Challenges in compiling the recommendations</strong></h3>
     <ul><li class="justified paragraph">  Short duration of the project meant getting all the research done and insights generation had to be quicker.</li>
     <li class="justified paragraph"> Difficulty in recruitment given the timelines.</li>
     <li class="justified paragraph"> Whether the developer of the COEIT research team would be willing the recommendations.</li>
@@ -145,7 +145,7 @@
 	<div class="container">
 	<div class="containerblue bottompadding">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>CONTEXTUAL INQUIRY</Strong></h3>
-		<p class="justified countermargin" style="color:#fff">
+		<p class="justified countermargin" style="color:#000">
 			 Participants </b> were recruited and observed in their natural element. Contextual inquiries were conducted because we wanted to about the website experience in general by letting users talk about what they are doing and why when they are doing it - Employing a think aloud protocol.
 		</p>
 		<div class="row">
@@ -153,17 +153,17 @@
 						<div class="count-box">
 							<i class="icofont-people"></i>
 							<span >2</span>
-							<p style="color:#fff; font-size:14px">Participants Observed</p>
+							<p style="color:#000; font-size:14px">Participants Observed</p>
 				</div>
 		</div>
 		<div class="col-md-6 uppermargin countermargin">
-			<p class="paragraph"  style="color:#fff"><b>Demographic:</b> Researchers (Faculty and Students) , Non-researchers (Faculty and Students) whose age ranged from 18-70</p>
+			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Researchers (Faculty and Students) , Non-researchers (Faculty and Students) whose age ranged from 18-70</p>
 
-				<p class="paragraph" style="color:#fff"><b>Gender:</b> Any</p>
+				<p class="paragraph" style="color:#000"><b>Gender:</b> Any</p>
 
-					<p class="paragraph" style="color:#fff"><b>Ethnicity: </b> Any</p>
+					<p class="paragraph" style="color:#000"><b>Ethnicity: </b> Any</p>
 
-					<p class="paragraph" style="color:#fff"><b>Device</b> Mobile (Android and IOS), Laptop, Desktops, IPad and other android tablets. . </p>
+					<p class="paragraph" style="color:#000"><b>Device</b> Mobile (Android and IOS), Laptop, Desktops, IPad and other android tablets. . </p>
 				</div>
 		</div>
 
@@ -223,7 +223,7 @@
     <div class="container">
   	<div class="containerblue bottompadding">
   		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
-  		<p class="justified countermargin" style="color:#fff">
+  		<p class="justified countermargin" style="color:#000">
   			Participants were asked to participate in a full interview that was <b>semi-structured</b>.  Specific inputs from the participants enabled us to strengthen the findings and combine the insights obtained from the contextual inquiries.
   		</p>
   		<div class="row">
@@ -231,17 +231,17 @@
               <div class="count-box">
                 <i class="icofont-people"></i>
                 <span >3</span>
-                <p style="color:#fff; font-size:14px">Participants Interviewed</p>
+                <p style="color:#000; font-size:14px">Participants Interviewed</p>
   			  </div>
   		</div>
   		<div class="col-md-6 uppermargin countermargin">
-  			<p class="paragraph"  style="color:#fff"><b>Demographic:</b> Researchers (Faculty and Students) , Non-researchers (Faculty and Students) whose age ranged from 18-70</p>
+  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Researchers (Faculty and Students) , Non-researchers (Faculty and Students) whose age ranged from 18-70</p>
 
-  				<p class="paragraph" style="color:#fff"><b>Gender:</b> Any</p>
+  				<p class="paragraph" style="color:#000"><b>Gender:</b> Any</p>
 
-  					<p class="paragraph" style="color:#fff"><b>Ethnicity: </b> Any</p>
+  					<p class="paragraph" style="color:#000"><b>Ethnicity: </b> Any</p>
 
-  					<p class="paragraph" style="color:#fff"><b>Device</b> Mobile (Android and IOS), Laptop, Desktops, IPad and other android tablets. . </p>
+  					<p class="paragraph" style="color:#000"><b>Device</b> Mobile (Android and IOS), Laptop, Desktops, IPad and other android tablets. . </p>
   				</div>
   		</div>
 
@@ -395,7 +395,7 @@
 
   <div class="container">
         <h3 class="uppermargin"><strong>Next Steps</strong></h3>
-        <p class="justified paragraph">We would like to point out that the recommendations suggested to the client would most certainly improve the user experience with the research website.</p>
+        <p class="justified paragraph">We would like to point out that the recommendations suggested to the client would most certainly improve the user experience with the research website. The next steps would be a more logical diversion to an A/B test once the client has incorporated the changes. By doing so, we might pick up on any improvements required from there on.</p>
 
 
   <h3 class="uppermargin"><b>Takeaways</b></h2>
