--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -147,7 +147,7 @@
     <div class="container">
   	<div class="containerblue bottompadding">
   		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
-  		<p class="justified countermargin" style="color:#fff">
+  		<p class="justified countermargin" style="color:#000">
   			I conducted interviews of people who worked at the university and atleast heard of the Shared Services Center. Experience of people with the website ranged from first time users to people who have seen the website since its inception.
   		</p>
   		<div class="row">
@@ -155,17 +155,17 @@
               <div class="count-box">
                 <i class="icofont-people"></i>
                 <span >5</span>
-                <p style="color:#fff; font-size:14px">Participants Interviewed</p>
+                <p style="color:#000; font-size:14px">Participants Interviewed</p>
   			  </div>
   		</div>
   		<div class="col-md-6 uppermargin countermargin">
-  			<p class="paragraph"  style="color:#fff"><b>Demographic:</b> Faculty, Students, Researchers and Admin Staff. Age: 18+<p>
+  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Faculty, Students, Researchers and Admin Staff. Age: 18+<p>
 
-  				<p class="paragraph" style="color:#fff"><b>Gender:</b> Any</p>
+  				<p class="paragraph" style="color:#000"><b>Gender:</b> Any</p>
 
-  					<p class="paragraph" style="color:#fff"><b>Ethnicity: </b> Any</p>
+  					<p class="paragraph" style="color:#000"><b>Ethnicity: </b> Any</p>
 
-  					<p class="paragraph" style="color:#fff"><b>Experience with the website:</b> No Experience to Expert User. </p>
+  					<p class="paragraph" style="color:#000"><b>Experience with the website:</b> No Experience to Expert User. </p>
   				</div>
   		</div>
 
@@ -231,7 +231,7 @@
   <div class="container">
     <div class="containerblue bottompadding">
       <h3 class="uppermargin3 color-x" align="center"><Strong>NET PROMOTER SCORE</Strong></h3>
-      <p class="justified countermargin" style="color:#fff">
+      <p class="justified countermargin" style="color:#000">
        I reached out to facebook groups, Whatsapp chats, and other forums with college students to know if they would recommend this website or not. The NPS score is a good indicator to tell me if the website needs improvements or not. I sent out the survey twice in a span of 6 months.
       </p>
       <div class="row">
@@ -239,10 +239,10 @@
               <div class="count-box">
                 <i class="icofont-people"></i>
                 <span>56</span>
-                <p style="color:#fff; font-size:14px">Survey Respondents</p>
+                <p style="color:#000; font-size:14px">Survey Respondents</p>
           </div>
       </div>
-      <div class="col-md-6 uppermargin countermargin"  style="color:#fff">
+      <div class="col-md-6 uppermargin countermargin"  style="color:#000">
         <img src="assets/img/Personal/NPS.png" class="img-fluid" alt="">
         <div align="center">
 
@@ -258,7 +258,7 @@
       </div>
 
         <div class="uppermargin countermargin">
-          <h2 class="justified" style="text-align:center; color:#fff"> NPS SCORE = 30.3</h2>
+          <h2 class="justified" style="text-align:center; color:#000"> NPS SCORE = 30.3</h2>
       </div>
         </div>
       </div>
