--- a/index.html
+++ b/index.html
@@ -91,28 +91,30 @@
       <div class="container">
 
           <h1 class="uppermargin project-title"><b>My Work</b></h1>
-          <h5 class="bottompadding">The projects below represent the work done in the space of accessibility, HCI and UX research, UX research for the web for various teams within the university, and my master's thesis which is also in the space of accessibility.</h5>
+          <h5 class="bottompadding">The projects below represent the work done in the space of accessibility, HCI and UX research, UX research for the web for various teams within the university.</h5>
         </div>
 
 
 
-          <div class="container  color-y portfolio-item filter-app uppermargin3">
+          <div class="container color-y portfolio-item filter-app uppermargin3">
             <div class="row bottompadding">
-              <div class="col-md-5 countermargin ">
-                <h1><strong>THE TRIDENT</strong></h1>
+              <div class="col-md-6 countermargin">
+                <h1 style="color:#004687"><strong>THE TRIDENT</strong></h1>
                 <div>
 
-                  <p class="paragraph ">A study to build a navigational aid for runners who are blind using Human Centered Design Methods and User Research.
+                  <p class="paragraph2 justified uppermargin">
+                    An industry funded study to assess the manner in which blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them with the detection of obstacles while on the run. Focus on HCI Research and User Centered Design.
+                  </p>
                   </p>
 
-                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
+                  <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
                   </p>
 
-                  <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'"> View Work </a></button>
+                  <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button>
                 </div>
               </div>
-              <div class="col-md-5 countermargin">
-                <img src="assets/img/Personal/BodyStorm1.jpeg" class="img-fluid" style="border-radius:2%" alt="">
+              <div class="col-md-4 countermargin uppermargin">
+                <img src="assets/img/Personal/Discussion 2.jpg" class="avatar14" alt="">
             </div>
              </div>
           </div>
@@ -123,16 +125,16 @@
           <div class="container color-y portfolio-item filter-card uppermargin">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin ">
-                <h1><strong>UMBC - COEIT RESEARCH</strong></h1>
+                <h1 style="color:#004687"><strong>UMBC - COEIT RESEARCH</strong></h1>
                 <div>
 
-                  <p class="paragraph">Project to provide recommendations for the univeristy's College of Engineering and Information Technology's RESEARCH website through extensive user research.
+                  <p class="paragraph2 justified uppermargin">Project to provide recommendations for the univeristy's College of Engineering and Information Technology's RESEARCH website through extensive user research.
                   </p>
 
-                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, Contextual Inquiries, Competitive Analysis, Heuristic Evaluations, Rapid Prototyping.</b>
+                  <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Context Interviews, Contextual Inquiries, Competitive Analysis, Heuristic Evaluations, Rapid Prototyping.</b>
                   </p>
 
-                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> View Work </a></button>
+                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
                 </div>
               </div>
               <div class="col-md-4 countermargin">
@@ -147,20 +149,20 @@
           <div class="container color-y portfolio-item filter-card uppermargin">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin">
-                <h1><strong>SHARED SERVICES CENTER WEBSITE REDESIGN</strong></h1>
+                <h1 style="color:#004687"><strong>SHARED SERVICES CENTER WEBSITE REDESIGN</strong></h1>
                 <div>
 
-                  <p class="paragraph">The Shared Services Center Team found it difficult to attract users to their website. This is a project to redesing the existing website using user research and front end web development.
+                  <p class="paragraph2 justified uppermargin">The Shared Services Center Team found it difficult to attract users to their website. This is a project to redesing the existing website using user research and front end web development.
                   </p>
 
-                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, NPS Score, Statistical Analysis, Heuristic Evaluations</b>
+                  <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Interviews, NPS Score, Statistical Analysis, Heuristic Evaluations</b>
                   </p>
 
-                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'"> View Work </a></button>
+                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
                 </div>
               </div>
               <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/HA.png" class="avatar7 uppermargin" alt="">
+                <img src="assets/img/Personal/HA.png" class="img-fluid uppermargin" alt="">
             </div>
              </div>
           </div>
@@ -171,16 +173,16 @@
           <div class="container color-y portfolio-item filter-app uppermargin">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin">
-                <h1><strong>B-AID - THE NAV APP FOR THE BLIND</strong></h1>
+                <h1 style="color:#004687"><strong>B-AID - THE NAV APP FOR THE BLIND</strong></h1>
                 <div>
 
-                  <p class="paragraph">Globally, millions of people suffer from vision related issues. Passionate as I am for accessibility, the project revolves around creating a mobile application prototype for individuals who are visually impaired relating to their navigation.
+                  <p class="paragraph2 justified uppermargin">Globally, millions of people suffer from vision related issues. Passionate as I am for accessibility, the project revolves around creating a mobile application prototype for individuals who are visually impaired relating to their navigation.
                   </p>
 
-                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, Field Studies, Storyboards, Affinity Map, Empathy map, Personas, Rapid Prototyping. </b>
+                  <p class="text-aria2 uppermargin"><b> 🕵️ Research Methods: Context Interviews, Field Studies, Storyboards, Affinity Map, Empathy map, Personas, Rapid Prototyping. </b>
                   </p>
 
-                  <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> View Work </a></button>
+                  <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> READ MORE </a></button>
                 </div>
               </div>
               <div class="col-md-4 countermargin">
