--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -185,7 +185,7 @@
 	<h3 class="uppermargin project-title"><b>Phase #1 - Review and Analysis</b></h3>
 	<div class="containerblue">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>LITERATURE REVIEWS</Strong></h3>
-		<p class="justified countermargin" style="color:#fff">
+		<p class="justified countermargin" style="color:#000">
 			The team collected several works related to prototypes for individuals who are blind. This rigorous search helped the team to understand the development from other researchers' perspectives. I populated and read through research papers to gain insight and information on the given topic, identify gaps in previous research. Overall, we wanted to have a solid background for our study.
 		</p>
 
@@ -250,7 +250,7 @@
 <section>
 	<div class="containerblue bottompadding">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
-		<p class="justified countermargin" style="color:#fff">
+		<p class="justified countermargin" style="color:#000">
 			We completed an <b>interview study of individuals</b> with visual impairments and their exercise tendencies and experiences. Through this interview we further explored the commonly used techniques for running as well as got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with variety of running experience ranging from casual hobbits runners to marathon runners and everyone in between.
 		</p>
 		<div class="row">
@@ -258,19 +258,19 @@
             <div class="count-box">
               <i class="icofont-people"></i>
               <span >13</span>
-              <p style="color:#fff; font-size:14px">Participants Interviewed</p>
+              <p style="color:#000; font-size:14px">Participants Interviewed</p>
 			  </div>
 		</div>
 		<div class="col-md-6 uppermargin countermargin">
-			<p class="paragraph"  style="color:#fff"><b>Demographic:</b> Individuals who are blind and go on runs. They can be first timers, regular marathon runners, or run with a tether. Age: 18+<p>
+			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Individuals who are blind and go on runs. They can be first timers, regular marathon runners, or run with a tether. Age: 18+<p>
 
-				<p class="paragraph" style="color:#fff" >
+				<p class="paragraph" style="color:#000" >
 
-				<p class="paragraph" style="color:#fff"><b>Gender:</b> Any<p>
+				<p class="paragraph" style="color:#000"><b>Gender:</b> Any<p>
 
-					<p class="paragraph" style="color:#fff"><b>Ethnicity: </b> Any</p>
+					<p class="paragraph" style="color:#000"><b>Ethnicity: </b> Any</p>
 
-					<p class="paragraph" style="color:#fff"><b>Devices:</b> Mobile (Android and IOS) and others (BuzzClip, SUNU Band, WeWalk Smart Cane, etc.,) </p>
+					<p class="paragraph" style="color:#000"><b>Devices:</b> Mobile (Android and IOS) and others (BuzzClip, SUNU Band, WeWalk Smart Cane, etc.,) </p>
 				</div>
 		</div>
 
@@ -378,18 +378,15 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 				<section>
 					<h3 class="uppermargin project-title"><b>Phase #3 - Prototype Building</b></h3>
-					<img src="assets/img/Personal/Build.jpg" class="avatar7" alt="">
 						<p class="justified paragraph"> We were now at a stage where we could build the prototype. We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT. </b></p>
 							<div class ="row">
 								<div class="col-md-6">
-									<ul>
 										<p class="justified paragraph">
 											The sensors are integrated in a way to mirror what we were working towards – A running belt worn by runners who are blind to detect obstacles.
 										</p>
 										<p class="justified paragraph">
 											 Velcro is used for ease of use.
-										</p>
-									</ul> </p>
+										</p></p>
 
 									</div>
 									<div class="col-md-6">
