Mobile Application commit

--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -136,7 +136,7 @@
 	</blockquote>
 
 <div class="container">
-	<h3 class ="uppermargin"><strong>Research Gap</strong></h3>
+	<h3 class ="uppermargin"><strong>Research Gap with respect to blind runners.</strong></h3>
 	<ul>
 		<li class="justified paragraph">While there is a lot of buzz in the market related to accessibility related products with respect to individuals who are blind, there is hardly any device that pops up when specific to running</span></li>
 		<li class="justified paragraph">There is not enough documented evidence to suggest that the existing research aids blind runners.</span></li>
