Last commit for now.

--- a/coeit-research.html
+++ b/coeit-research.html
@@ -344,15 +344,15 @@
 			My teammate and I gained deep insights from the research conducted, that included the participants ranging from faculty to researchers to students
     </p>
 			<ul class="justified">
-				<li class="paragraph justified"><b class="textbackground3"> Content Information: </b>Stressed on the lack of contact information for various resources and services listed on the website, which would otherwise promote collaboration. </li>
-				<li class="paragraph justified"><b class="textbackground3"> Nesting Info: </b>Lack of nesting of information caused frustration.</li>
+				<li class="paragraph justified"><b class="textbackground3"> Content Information: </b>Stressed on the lack of contact information for various resources and services listed on the website, which would otherwise promote collaboration. </p>
+				<li class="paragraph justified"><b class="textbackground3"> Nesting Info: </b>Lack of nesting of information caused frustration.</p>
 				<li class="paragraph justified"><b class="textbackground3"> Consistency: </b>Participants were aggravated by the lack of internal consistency within the website, regarding the navigational menu, and navigation within its sub pages.
-				</li>
-				<li class="paragraph justified"><b class="textbackground3"> Users and Emotions: </b>At a deeper level, other personality traits include an expressive behavior to do what they want and pursue research, and suppressing emotion when a search fails. Impatient users would cut a frustrated figure due to the loopholes in navigation,  or blame the content curators for not giving them the appropriate results. Users also express themselves as independent individuals, exploring interesting areas of research.We found that users range from being inquisitive about the content presented by the website, to being oblivious about its content due to its outdated nature.	</li>
+				</p>
+				<li class="paragraph justified"><b class="textbackground3"> Users and Emotions: </b>At a deeper level, other personality traits include an expressive behavior to do what they want and pursue research, and suppressing emotion when a search fails. Impatient users would cut a frustrated figure due to the loopholes in navigation,  or blame the content curators for not giving them the appropriate results. Users also express themselves as independent individuals, exploring interesting areas of research.We found that users range from being inquisitive about the content presented by the website, to being oblivious about its content due to its outdated nature.	</p>
 
 				<li class="paragraph justified">
 				<b class="textbackground3"> Research:</b>	Additionally, current students appeared to be focused on the type of research they want to conduct while people looking for funding are hopeful of finding content on the website that can lead to finding it.
-				</li>
+			</p>
 			</ul>
 </div>
 
