--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -325,7 +325,7 @@
 
   <div class="container">
         <h3 class="uppermargin"><strong>Next Steps</strong></h3>
-        <p class="justified paragraph">As a team, we would be monitoring the data with respect to bounce rates, click rates over the course of the next three months. Following which, we would decide whether to make minjor changes or not.</p>
+        <p class="justified paragraph">As a team, we would be monitoring the data with respect to bounce rates, click rates over the course of the next three months. The team will perform various tests on the new website and compare the metrics with the older version to check how the website is doing. Post three months, the team would send out another survey with respect to the NPS scored that now stands at 50.</p>
 
 
   <h3 class="uppermargin"><b>Takeaways</b></h2>
