--- a/mobileapp.html
+++ b/mobileapp.html
@@ -296,7 +296,7 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 							</p>
 
 							<h4 class="uppermargin"><b>USER BASE</b></h4>
-							<p class ="justified paragraph"> From the discovery stage, I came to a conclusion about the user base. These could be any person from the <b>age of 15 and above, who uses a mobile phone</b> for communication and has basic knowledge of maps. </span></p>
+							<p class ="justified paragraph"> From the discovery stage, I came to a conclusion about the user base. These could be any person from the <b class="textbackground3">age of 15 and above, who uses a mobile phone</b> for communication and has basic knowledge of maps. </span></p>
 
 								<h3 class="uppermargin" align="center"><b>PERSONAS</b></h4>
 								<p class="justified">Among the other things, they want to see applications that give them the presence of sidewalks, the positioning of intersections, an emergency assistance button, and a scanner of handwritten data. Additionally, several application-specific pointers were noted down and eventually referenced to a User Persona to get an idea of how the application will be shaped in the future. To better understand what the audience under consideration need and what the application might serve.</p>
@@ -311,7 +311,7 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 
 					<p class="justified">
 
-					I created <b>early research storyboards</b> to envision the finished application in terms of a real world setting. Turns out, the storyboards were <b>very short, sequence-orientated, and fit the overall narrative well. </b> I envisioned the finished research project - how the mobile application would function in a real life scenario. </p>
+					I created early research storyboards to envision the finished application in terms of a real world setting. Turns out, the storyboards were very short, sequence-orientated, and fit the overall narrative well. I envisioned the finished research project - how the mobile application would function in a real life scenario. </p>
 					<p>
 						Storyboards changed my perception of the functionalities that can be implemented in my project. I realized that my application cannot have all the functionalities that I desire because of constraints indicated by the storyboards. The storyboards helped me synthesize the content and match my thinking with the constraints.
 					</p>
@@ -379,14 +379,17 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 			<h3 class="uppermargin portfolio-title"><b>Prototype</b></h3>
 
 				<p class="justified">
-					<span class = "paragraph"> Starting with the <span class="textbackground3"><b> Pen and Paper Sketches </b> </span> for low fidelity, <span class="textbackground3"> <b> Balsamiq Mockups </b> </span> for medium fidelity, and <span class="textbackground3"> <b> Adobe XD </b></span> for high fidelity mockups, I went in stages.</p>
+					<span class = "paragraph"> Starting with the <b class="textbackground3"> Pen and Paper Sketches </b>  for low fidelity,  <b class="textbackground3"> Balsamiq Mockups </b>  for medium fidelity, and  <b class="textbackground3"> Adobe XD </b></span> for high fidelity mockups, I went in stages.</p>
+
+
 					<h4><b>Low Fidelity Mockups</b></h4>
-					<p class="justified paragraph"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first.</span> </p>
+					<p class="justified paragraph"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first. </p>
 						<img src="assets/img/Personal/PPSketch.png" class="avatar4" alt="">
 
 
 						<h4 class="uppermargin"><b>Medium Fidelity Mockups</b></h4>
 						<p class="justified paragraph"> I used Balsamiq Mockups to generate the wireframes of the skeletal structure of the application. Balsamiq Mockups is a great tool with a low learnability curve and relative ease of use.</span> </p>
+
 							<h6 class="textbackground3"><b>Main Screen</b></h6>
 							<div class="row">
 								<div class ="col-md-4">
