--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -104,10 +104,10 @@
 				</p>
 			</p>
 
-			<h3 class ="uppermargin"><strong>My Role </strong></h3>
+			<h3 class ="uppermargin"><strong>My Role in this longitudinal study</strong></h3>
 			<p class="justified paragraph">  This project was done in collaboration with <b class="textbackground3">TOYOTA.</b> This was a two year project. It included an overall team of 5 people, cutting across diversities, comprising of Designers, HCI Researchers, and a Faculty as the chief investigator. <b class="textbackground3">As the lead user researcher</b>, I successfully helped build the prototype to aid blind runners leading the student team in research related activities.</p>
 
-		<h3 class="uppermargin"><strong>Outcome</strong></h3>
+		<h3 class="uppermargin"><strong>Outcome of the project</strong></h3>
 		<p class="justified paragraph"> As a team, we prioritized user research and narrowed down on the type of device that can fit the users' needs.</p>
 		<p class="justified paragraph"> We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT - The TRIDENT. </b> </p>
 
@@ -119,7 +119,7 @@
 
 
 
-<h3 class ="uppermargin"><strong>Challenges</strong></h3>
+<h3 class ="uppermargin"><strong>Challenges we faced along the way</strong></h3>
 <ul><li class="justified paragraph">  Study was challenging because of the dearth of existing literature about projects and devices used in this space. </li>
 <li class="justified paragraph"> Testing with real users was a problem given pandemic protocols.</li>
 <li class="justified paragraph"> As the user base was niche, recruitment of participants was a hard and long process.</li>
@@ -313,7 +313,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 	<div class="container">
 		<h3 class="uppermargin project-title"><b>Phase #2 - Users</b></h3>
 
-	<p class="justified paragraph">	Having understood the competitive landscape, research projects, and the behavior of users while on the run, we were <b>ready to profile the users, build empathy and solidify the information, help in ideating the design for the prototype</b> given the insights we had at our disposal. </p>
+	<p class="justified paragraph">	Having understood the competitive landscape, research projects, and the behavior of users while on the run, we were <b class="textbackground3">ready to profile the users, build empathy and solidify the information, help in ideating the design for the prototype</b> given the insights we had at our disposal. </p>
 
 	<h3 class="uppermargin3" align="center"><Strong>PERSONA</Strong></h3>
 					<figure>
@@ -394,7 +394,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 									</div>
 
 									<div class="col-md-6">
-										 <p class="justified paragraph">We named the device, the TRIDENT. <b>TRIDENT</b> stands <b class ="textbackground3"> for Tri-Positional Detection and Navigational Technology.</b></p>
+										 <p class="justified paragraph">We named the device, the TRIDENT. <b class="textbackground3">TRIDENT</b> stands <b class ="textbackground3"> for Tri-Positional Detection and Navigational Technology.</b></p>
 									</div>
 									<div class="col-md-6">
 										 <img src="assets/img/Personal/Prototype_back.png" class="img-fluid" alt="">
