--- a/index.html
+++ b/index.html
@@ -122,13 +122,38 @@
           <div class="uppermargin3">
           </div>
 
+
+                    <div class="container color-y portfolio-item filter-card uppermargin">
+                      <div class="row bottompadding">
+                        <div class="col-md-6 countermargin">
+                          <h1 style="color:#004687"><strong>SHARED SERVICES CENTER WEBSITE REDESIGN</strong></h1>
+                          <div>
+
+                            <p class="paragraph2 justified uppermargin">The Shared Services Center Team found it difficult to attract users to their website. This is a project to redesing the existing website using user research and front end web development.
+                            </p>
+
+                            <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Interviews, NPS Score, Statistical Analysis, Heuristic Evaluations</b>
+                            </p>
+
+                            <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
+                          </div>
+                        </div>
+                        <div class="col-md-4 countermargin uppermargin">
+                          <img src="assets/img/Personal/HA.png" class="img-fluid uppermargin" alt="">
+                      </div>
+                       </div>
+                    </div>
+
+          <div class="uppermargin3">
+          </div>
+
           <div class="container color-y portfolio-item filter-card uppermargin">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin ">
-                <h1 style="color:#004687"><strong>UMBC - COEIT RESEARCH</strong></h1>
+                <h1 style="color:#004687"><strong>COEIT RESEARCH REDESIGN</strong></h1>
                 <div>
 
-                  <p class="paragraph2 justified uppermargin">Project to provide recommendations for the univeristy's College of Engineering and Information Technology's RESEARCH website through extensive user research.
+                  <p class="paragraph2 justified uppermargin">A semester project to provide recommendations for the College of Engineering and Information Technology (COEIT) research website through extensive user research. This website is visited by faculty, students, and researchers alike.
                   </p>
 
                   <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Context Interviews, Contextual Inquiries, Competitive Analysis, Heuristic Evaluations, Rapid Prototyping.</b>
@@ -137,7 +162,7 @@
                   <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
                 </div>
               </div>
-              <div class="col-md-4 countermargin">
+              <div class="col-md-4 countermargin uppermargin">
                 <img src="assets/img/Personal/CR.png" class="img-fluid uppermargin" alt="">
             </div>
              </div>
@@ -146,34 +171,11 @@
           <div class="uppermargin3">
           </div>
 
-          <div class="container color-y portfolio-item filter-card uppermargin">
-            <div class="row bottompadding">
-              <div class="col-md-6 countermargin">
-                <h1 style="color:#004687"><strong>SHARED SERVICES CENTER WEBSITE REDESIGN</strong></h1>
-                <div>
-
-                  <p class="paragraph2 justified uppermargin">The Shared Services Center Team found it difficult to attract users to their website. This is a project to redesing the existing website using user research and front end web development.
-                  </p>
-
-                  <p class="text-aria2 uppermargin"><b>🕵️ Research Methods: Interviews, NPS Score, Statistical Analysis, Heuristic Evaluations</b>
-                  </p>
-
-                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
-                </div>
-              </div>
-              <div class="col-md-4 countermargin uppermargin">
-                <img src="assets/img/Personal/HA.png" class="img-fluid uppermargin" alt="">
-            </div>
-             </div>
-          </div>
-
-          <div class="uppermargin3">
-          </div>
 
           <div class="container color-y portfolio-item filter-app uppermargin">
             <div class="row bottompadding">
               <div class="col-md-6 countermargin">
-                <h1 style="color:#004687"><strong>B-AID - THE NAV APP FOR THE BLIND</strong></h1>
+                <h1 style="color:#004687"><strong>B-AID : THE NAV APP FOR THE BLIND</strong></h1>
                 <div>
 
                   <p class="paragraph2 justified uppermargin">Globally, millions of people suffer from vision related issues. Passionate as I am for accessibility, the project revolves around creating a mobile application prototype for individuals who are visually impaired relating to their navigation.
