--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         </div>
       </div>
       <div class="social-links">
-        <a href="https://www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
+        <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+		<a href="https://medium.com/@nagarajan.anirudh" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
