--- a/coeit-research.html
+++ b/coeit-research.html
@@ -124,7 +124,7 @@
     </section>
 
     	<blockquote class="otro-blockquote">
-    		    I think this button is a little weird, it’s on like every page Did you find what you were looking for today? It looks like a button but it is actually a link in a box. That's kinda weird. I don’t want to go there, it scares me. - Participant
+    		    I think this button is a little weird, it’s on like every page Did you find what you were looking for today? It looks like a button but it is actually a link in a box. That's kinda weird. I don’t want to go there, it scares me.
     	</blockquote>
 
 
@@ -357,7 +357,7 @@
 </div>
 
 			<blockquote class="otro-blockquote">
-			  I like this graphic (Referring to the graphic on the homepage). Always catches my attention, graphics. But I really do not know what/why these images on the homepage even exist. - Participant
+			  I like this graphic (Referring to the graphic on the homepage). Always catches my attention, graphics. But I really do not know what/why these images on the homepage even exist.
 			</blockquote>
 
 
