--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -124,7 +124,7 @@
     </section>
 
     	<blockquote class="otro-blockquote">
-    		I have been to this website before, so I know what is happening. If I was new, I would just be staring at it. - Participant
+    		I have been to this website before, so I know what is happening. If I was new, I would just be staring at it.
     	</blockquote>
 
 
@@ -133,7 +133,7 @@
 <section>
   <div class="container">
     <h3><b>Older Information Architecture</b></h2>
-      <img src="assets/img/Personal/Architecture_old.png" class="avatar4 uppermargin" alt="">
+      <img src="assets/img/Personal/Architecture_Old.png" class="avatar4 uppermargin" alt="">
     </div>
 </section>
 
@@ -304,7 +304,7 @@
   <section>
     <div class="container">
       <h3><b>New Information Architecture</b></h2>
-        <img src="assets/img/Personal/Architecture_new.png" class="avatar4 uppermargin" alt="">
+        <img src="assets/img/Personal/Architecture_New.png" class="avatar4 uppermargin" alt="">
       </div>
   </section>
 
@@ -315,7 +315,7 @@
       <p class="justified paragraph">Through observations and incorporating quantitative data, the team managed to improve the <b class="textbackground3"> NPS from 30 - 50</b>. </p>
       <p class="justified paragraph">Increase the number of users over a period of 6 months to an all time high of <b class="textbackground3">181 users </b> for a single month. </p>
 
-      <img src="assets/img/Personal/userdata.png" class="img-fluid uppermargin" alt="">
+      <img src="assets/img/Personal/UserData.png" class="img-fluid uppermargin" alt="">
 
       <p class="justified paragraph"> The page views have been consistent and the <b class="textbackground3"> bounce rates came to stand at an all time low of 27%. </b> </p>
 
