--- a/mobileapp.html
+++ b/mobileapp.html
@@ -367,7 +367,7 @@ I travelled to blind schools to observe the individuals in a natural space, taki
 
 </section>
 <section id="insights3">
-	<div class="container" data-aos="fade-up">
+	<div class="container">
 		<h2><b>❗ Importance of Progressive Disclosure</b></h2>
 		<p class="justified">I am extremely mindful to employ progressive disclosure. Given that we are dealing with individuals who are blind, we really cannot push too much information on a single screen. The content has to be relatively easy to identify and understand. Progressive Disclosure would allow me to push all the information that was not necessary to screens at the back that would only appear when needed. (Based on the functionalities presented to the user.) </p>
 	</div>
