--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -132,7 +132,7 @@
 </section>
 
 	<blockquote class="otro-blockquote">
-		And then the button there's a button for, like, goes up and down by a tenth of a mile. And those are like, tactical buttons, so you can feel so push those and then the start and stop buttons are tactile.
+		And those are like, tactical buttons, so you can feel so push those. The start and stop buttons are tactile.
 	</blockquote>
 
 <div class="container">
